# trading-bot-HA-NUN

./: .cursorignore  .env  .env.example  .gitattributes  .gitignore  .gitignore.hanoon  LEARN_START.command  PRESERVE_INSTRUCTIONS.md  README.md  REPLAY_START.command  REPLAY_STOP.command  SCANNER_ANALYSIS.md  SNIPER_INTEGRATION_COMPLETE.md  START DASHBOARD.command  START LIVE TRADING.command  START PAPER TRADING.command  START SCALPER.command  START.command  START_HALIM.command  START_LSE.command  START_US.command  STOP.command  STOP_HALIM.command  WEEKEND_REPLAY_START.command  WEEKEND_REPLAY_STOP.command  backtest_1min_ai.py  backtest_complete.py  backtest_standalone.py  colab_training.ipynb  debug_data.py  full_disk_cleanup.sh  live_metrics.json  main.py  requirements-legacy.txt  requirements-lock.txt  requirements.txt  run_preserve.py  run_single_stock.py  start.sh  stop.sh  (+7 more)
docs/: OPS.md  (+30 more)
halim/: .gitattributes  .gitignore  HALIM_MANIFEST.json  README.md  ROADMAP.md  pyproject.toml
halim/colab/: COLAB_DRIVE_CELLS.md  COLAB_GUIDE.md  colab_drive_setup.py  merge_lora_colab.py  train_toddler_colab.py
halim/data/: registry.jsonl
halim/docs/: ARCHITECTURE.md  GUARDRAILS.md
halim/halim/: __init__.py  __main__.py  active_model.py  capabilities.py  client.py  dataset.py  device.py  engine.py  guardrails.py  inference_backend.py  phases.py  protocol.py  scaffold.py  serve.py  unlock.py
halim/scripts/: eval_toddler.py  export_json_entry_gold.py  export_training_gold.py  find_colab_checkpoint.py  package_colab_sft.py  prepare_sft.py  readiness.py  record_sft_trained.py  (+3 more)
(+842 files in other folders)
