[project]
name = "halim"
version = "0.1.0"
description = "M. A. Halim — owned AI model (newborn → frontier)"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
train = ["mlx-lm>=0.19", "mlx>=0.21"]
serve = ["mlx-lm>=0.19", "mlx>=0.21"]
serve-hf = ["torch", "transformers", "peft"]
dev = []

[tool.setuptools.packages.find]
where = ["."]
include = ["halim*"]
